fixed schema errors in complementary-products section

--- a/sections/complementary-products.liquid
+++ b/sections/complementary-products.liquid
@@ -2,9 +2,7 @@ test
 {% schema %}
 {
   "name": "Produkty uzupełniające",
-  "settings": [
-    {}
-    ],
+  "settings": [],
     "presets": [
       {
         "name": "Produkty uzupełniające"
