--- a/sections/related-products.liquid
+++ b/sections/related-products.liquid
@@ -50,7 +50,7 @@
       {
         "type": "number",
         "id": "limit",
-        "label": "Maksymalna liczba produktów",
+        "label": "Maksymalna liczba produktów (od 1 do 10)",
         "default": 4
       }
     ]
