--- a/sections/complementary-products.liquid
+++ b/sections/complementary-products.liquid
@@ -53,6 +53,12 @@
         "label": "Maksymalna liczba produktów (od 1 do 10)",
         "default": 4
       }
+    ],
+    "presets": [
+      {
+        "name": "Produkty uzupełniające",
+        "category": "Produkty"
+      }
     ]
   }
 {% endschema %}
