--- a/sections/complementary-products.liquid
+++ b/sections/complementary-products.liquid
@@ -10,6 +10,7 @@
       {%- for product in recommendations.products -%}
         {% render 'collection-product-card'		
           , product: product
+          , addToCart: true
         %}
       {%- endfor -%}
     </div>
