--- a/sections/collection-grid.liquid
+++ b/sections/collection-grid.liquid
@@ -1,4 +1,5 @@
 {% render 'collection-filters' %}
+<div class="container">{% render 'breadcrumbs' %}</div>
 <div class="container">
   <div>
     {% render 'collection-product-grid'
