--- a/assets/app.css
+++ b/assets/app.css
@@ -996,10 +996,6 @@ th {
   margin-top: 2rem;
   margin-bottom: 2rem;
 }
-.mx-2 {
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
-}
 .\!mt-5 {
   margin-top: 1.25rem !important;
 }
@@ -1074,12 +1070,6 @@ th {
 }
 .mt-auto {
   margin-top: auto;
-}
-.mr-2 {
-  margin-right: 0.5rem;
-}
-.box-border {
-  box-sizing: border-box;
 }
 .block {
   display: block;
@@ -1262,6 +1252,9 @@ th {
 .min-w-full {
   min-width: 100%;
 }
+.\!max-w-\[500px\] {
+  max-width: 500px !important;
+}
 .max-w-\[1020px\] {
   max-width: 1020px;
 }
@@ -1292,12 +1285,6 @@ th {
 .max-w-\[900px\] {
   max-width: 900px;
 }
-.\!max-w-\[600px\] {
-  max-width: 600px !important;
-}
-.\!max-w-\[500px\] {
-  max-width: 500px !important;
-}
 .flex-1 {
   flex: 1 1 0%;
 }
@@ -1309,9 +1296,6 @@ th {
 }
 .flex-grow {
   flex-grow: 1;
-}
-.border-collapse {
-  border-collapse: collapse;
 }
 .origin-right {
   transform-origin: right;
@@ -1715,10 +1699,6 @@ th {
 .bg-white\/50 {
   background-color: rgb(255 255 255 / 0.5);
 }
-.bg-off-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(248 249 244 / var(--tw-bg-opacity));
-}
 .bg-opacity-10 {
   --tw-bg-opacity: 0.1;
 }
@@ -2094,10 +2074,6 @@ th {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
-.text-blue-600 {
-  --tw-text-opacity: 1;
-  color: rgb(37 99 235 / var(--tw-text-opacity));
-}
 .underline {
   text-decoration-line: underline;
 }
@@ -2265,7 +2241,7 @@ th {
   margin-bottom: 20px;
 }
 /* Instagram feed styles */
-div[data-block-handle='ig_feed'] {
+#tizzy-ig-container-1 {
   width: 100% !important;
   margin-right: auto !important;
   margin-left: auto !important;
@@ -2273,32 +2249,32 @@ div[data-block-handle='ig_feed'] {
   padding-left: 20px !important;
 }
 @media (min-width: 640px) {
-  div[data-block-handle='ig_feed'] {
+  #tizzy-ig-container-1 {
     max-width: 640px !important;
   }
 }
 @media (min-width: 768px) {
-  div[data-block-handle='ig_feed'] {
+  #tizzy-ig-container-1 {
     max-width: 768px !important;
   }
 }
 @media (min-width: 1024px) {
-  div[data-block-handle='ig_feed'] {
+  #tizzy-ig-container-1 {
     max-width: 1024px !important;
   }
 }
 @media (min-width: 1280px) {
-  div[data-block-handle='ig_feed'] {
+  #tizzy-ig-container-1 {
     max-width: 1280px !important;
   }
 }
 @media (min-width: 1536px) {
-  div[data-block-handle='ig_feed'] {
+  #tizzy-ig-container-1 {
     max-width: 1536px !important;
   }
 }
-div[data-block-handle='ig_feed'] {
-  max-width: 1200px;
+#tizzy-ig-container-1 {
+  max-width: 1200px !important; /* the container class has this applied but for some reason it's not working. maybe it's overwritten by the IG FEED app */
 }
 @supports not (aspect-ratio: 1 / 1) {
   .tz-i::before {
@@ -2388,9 +2364,6 @@ div[data-block-handle='ig_feed'] {
   --tw-scale-y: 1.3;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
-.hover\:border-2:hover {
-  border-width: 2px;
-}
 .hover\:\!bg-gray-100:hover {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity)) !important;
@@ -2415,22 +2388,19 @@ div[data-block-handle='ig_feed'] {
   --tw-bg-opacity: 1;
   background-color: rgb(245 245 245 / var(--tw-bg-opacity));
 }
-.hover\:bg-red-900:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(127 29 29 / var(--tw-bg-opacity));
-}
 .hover\:bg-primary:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(236 118 74 / var(--tw-bg-opacity));
+}
+.hover\:bg-red-900:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(127 29 29 / var(--tw-bg-opacity));
 }
 .hover\:fill-accent:hover {
   fill: #ec764a;
 }
 .hover\:fill-primary:hover {
   fill: #ec764a;
-}
-.hover\:font-medium:hover {
-  font-weight: 500;
 }
 .hover\:text-accent:hover {
   --tw-text-opacity: 1;
@@ -2455,14 +2425,6 @@ div[data-block-handle='ig_feed'] {
 .hover\:text-white:hover {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-.hover\:text-gray-700:hover {
-  --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity));
-}
-.hover\:text-blue-800:hover {
-  --tw-text-opacity: 1;
-  color: rgb(30 64 175 / var(--tw-text-opacity));
 }
 .hover\:decoration-2:hover {
   text-decoration-thickness: 2px;
@@ -2625,12 +2587,6 @@ div[data-block-handle='ig_feed'] {
   .sm\:w-max {
     width: -moz-max-content;
     width: max-content;
-  }
-  .sm\:w-auto {
-    width: auto;
-  }
-  .sm\:w-full {
-    width: 100%;
   }
   .sm\:min-w-\[400px\] {
     min-width: 400px;
@@ -2841,27 +2797,6 @@ div[data-block-handle='ig_feed'] {
   .md\:grid-cols-\[1fr_\.3fr_\.3fr\] {
     grid-template-columns: 1fr .3fr .3fr;
   }
-  .md\:grid-cols-\[minmax\(100px\2c 400px\)_1fr\] {
-    grid-template-columns: minmax(100px,400px) 1fr;
-  }
-  .md\:grid-cols-\[minmax\(1fr\2c 400px\)_1fr\] {
-    grid-template-columns: minmax(1fr,400px) 1fr;
-  }
-  .md\:grid-cols-\[minmax\(max-content\2c 400px\)_1fr\] {
-    grid-template-columns: minmax(max-content,400px) 1fr;
-  }
-  .md\:grid-cols-\[400px_1fr\] {
-    grid-template-columns: 400px 1fr;
-  }
-  .md\:grid-cols-\[500px_1fr\] {
-    grid-template-columns: 500px 1fr;
-  }
-  .md\:grid-cols-\[300px_1fr\] {
-    grid-template-columns: 300px 1fr;
-  }
-  .md\:grid-cols-\[350px_1fr\] {
-    grid-template-columns: 350px 1fr;
-  }
   .md\:flex-row {
     flex-direction: row;
   }
@@ -2876,18 +2811,6 @@ div[data-block-handle='ig_feed'] {
   }
   .md\:gap-10 {
     gap: 2.5rem;
-  }
-  .md\:gap-4 {
-    gap: 1rem;
-  }
-  .md\:gap-2 {
-    gap: 0.5rem;
-  }
-  .md\:gap-5 {
-    gap: 1.25rem;
-  }
-  .md\:place-self-auto {
-    place-self: auto;
   }
   .md\:place-self-end {
     place-self: end;
@@ -2931,12 +2854,6 @@ div[data-block-handle='ig_feed'] {
   }
   .lg\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
-  }
-  .lg\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-  .lg\:grid-cols-\[400px_1fr\] {
-    grid-template-columns: 400px 1fr;
   }
 }
 @media (min-width: 1280px) {
