--- a/snippets/cart-drawer-content.liquid
+++ b/snippets/cart-drawer-content.liquid
@@ -53,15 +53,16 @@
 				<h3 class="font-normal text-xl">Suma:</h3>
 				<p class="font-medium text-xl text-accent">{{ cart.total_price | money }}</p>
 			</div>
-			<a class="button text-center uppercase" href="{{ routes.cart_url }}">Do koszyka</a>
+			<a class="button text-center uppercase" href="{{ routes.cart_url }}">Koszyk</a>
 		</div>
 	</form>
 	{% else %}
 		<div class="flex flex-col justify-center items-center gap-5 h-[70vh]">
 			{% render 'icon-shopping-bag', size: 80, stroke: 1 %}
 			<h3 class="text-3xl font-light">Twój koszyk jest pusty</h3>
-			<a href="{{ routes.all_products_collection_url }}" class="button">
+			<a href="{{ section.settings.button_url }}" class="button">
 				Kontynuuj zakupy
 			</a>
 		</div>
 {% endif %}
+
