Update link to all products collection

--- a/snippets/account-content.liquid
+++ b/snippets/account-content.liquid
@@ -90,7 +90,7 @@
   {% else %}
     <div class="flex flex-col justify-center items-center">
       <p>Nie masz jeszcze zamówień</p>
-      <a href="{{ routes.all_products_collection_url }}" class="inline-block button mt-3">
+      <a href="/collections/wszystko" class="inline-block button mt-3">
         Kontynuuj zakupy
       </a>
     </div>
