--- a/sections/related-products.liquid
+++ b/sections/related-products.liquid
@@ -1,48 +1,13 @@
-<div class="product-recommendations container" data-url="{{ routes.product_recommendations_url }}?section_id={{ section.id }}&product_id={{ product.id }}&limit={{section.settings.limit}}&intent=related">
-  {%- if recommendations.performed? and recommendations.products_count > 0 -%}
-    {% if recommendations.intent == 'related' %}
-      <h2 class="text-4xl uppercase text-center text-primary">Powiązane produkty</h2>
-    {% elsif recommendations.intent == 'complementary' %}
-      <h2 class="text-4xl uppercase text-center text-primary">Produkty uzupełniające</h2>
-    {% endif %}
 
-    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 items-start text-xl relative place-items-center mt-10">
-      {%- for product in recommendations.products -%}
-        {% render 'collection-product-card'		
-          , product: product
-        %}
-      {%- endfor -%}
+<div x-data="relatedProducts">
+  <template x-for="product in products">
+    <div class="">
+      <a :href="product.url">
+        <img :src="getImageSrcWithSize(product.featuredImage.originalSrc, '350x400')" width="300" height="500" loading="lazy" :alt="product.title">
+        <h3>{{ product.title }}</h3>
+      </a>
     </div>
-  {%- endif -%}
 </div>
-{% javascript %}
-  const handleIntersection = (entries, observer) => {
-    if (!entries[0].isIntersecting) return;
-    
-
-
-    observer.unobserve(productRecommendationsSection);
-
-    const url = productRecommendationsSection.dataset.url;
-
-    fetch(url).then(response => response.text()).then(text => {
-      const html = document.createElement('div');
-      html.innerHTML = text;
-      const recommendations = html.querySelector('.product-recommendations');
-
-      if (recommendations && recommendations.innerHTML.trim().length) {
-        productRecommendationsSection.innerHTML = recommendations.innerHTML;
-      }
-    }).catch(e => {
-      console.error(e);
-    });
-  };
-
-  const productRecommendationsSection = document.querySelector('.product-recommendations');
-  const observer = new IntersectionObserver(handleIntersection, {rootMargin: '0px 0px 200px 0px'});
-
-  observer.observe(productRecommendationsSection);
-{% endjavascript %}
 {% schema %}
   {
     "name": "Produkty powiązane",
